--- a/assignments/notebooks/01 - Introduction to Python (Basics).ipynb
+++ b/assignments/notebooks/01 - Introduction to Python (Basics).ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -42,15 +42,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 2\n",
+    "d = 100\n",
+    "D = 120\n",
     "y = 5\n",
-    "xy = 'Hey Big Data Class'"
+    "x = 2\n",
+    "xy = 'Thanks for the coffee'\n",
+    "y = 10 \n",
+    "\n",
+    "print y "
    ]
   },
   {
@@ -62,12 +73,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 Hey Big Data Class\n"
+      "2 Hey Big Data Class\n"
      ]
     }
    ],
    "source": [
-    "print x+y, xy"
+    "print x+y-y, xy"
    ]
   },
   {
@@ -136,22 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "1+2"
+    "print 1+3 \n",
+    "x = 1 \n",
+    "y = 2 \n"
    ]
   },
   {
@@ -171,7 +181,7 @@
     }
    ],
    "source": [
-    "2-1"
+    "2-5"
    ]
   },
   {
@@ -225,22 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
     }
    ],
    "source": [
-    "1/2.0"
+    "print 17/2"
    ]
   },
   {
@@ -313,27 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "z = 1"
+    "z = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -543,13 +550,13 @@
      "output_type": "stream",
      "text": [
       "6.0\n",
-      "4.56\n"
+      "4.5453543452\n"
      ]
     }
    ],
    "source": [
     "print round(5.6231) \n",
-    "print round(4.55892, 2)"
+    "print round(4.545354345243523452354292, 10)"
    ]
   },
   {
@@ -648,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +669,7 @@
    ],
    "source": [
     "print pow(3,3)\n",
-    "print pow(3,3,5)"
+    "print pow(3,3,5)\n"
    ]
   },
   {
@@ -674,23 +681,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2]\n",
-      "[2, 3, 4, 5, 6, 7, 8]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
       "[2, 10, 18, 26]\n"
      ]
     }
    ],
    "source": [
-    "print range(3)\n",
-    "print range(2,9)\n",
-    "print range(2,27,8)"
+    "x = 5\n",
+    "print range(x)\n",
+    "\n",
+    "print range(1,9)\n",
+    "\n",
+    "print range(2,27,8)\n"
    ]
   },
   {
@@ -785,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -800,7 +810,7 @@
     }
    ],
    "source": [
-    "string1 = 'World'\n",
+    "string1 = \"World\"\n",
     "print 'Hello', string1\n",
     "\n",
     "string2 = '!'\n",
@@ -816,19 +826,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HelloWorld!\n"
+      "Hello World\n"
      ]
     }
    ],
    "source": [
-    "print 'Hello' + string1 + string2"
+    "x = \"Hello\"\n",
+    "y = \"World\"\n",
+    "print x,y"
    ]
   },
   {
@@ -1067,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1078,19 +1090,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<type 'list'>\n"
+      "<type 'list'>\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "print type(a)"
+    "print type(a)\n",
+    "print isinstance(a,list)"
    ]
   },
   {
@@ -1102,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -1127,22 +1141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'apple'"
+       "'orange'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x[0]"
+    "print x[1]"
    ]
   },
   {
@@ -1154,22 +1168,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'orange'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple orange\n"
+     ]
     }
    ],
    "source": [
-    "x[-1]"
+    "print x[0],x[1]"
    ]
   },
   {
@@ -1181,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -1199,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1227,20 +1238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'orange']\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "z1 = z[0]\n",
-    "print z1"
+    "print z1 == x"
    ]
   },
   {
@@ -1697,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -1721,6 +1732,7 @@
    ],
    "source": [
     "lst.append(1)\n",
+    "lst.extend(lst)\n",
     "print lst"
    ]
   },
@@ -2972,21 +2984,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 12\n",
     "if x >10:\n",
-    "    print \"Hello\""
+    "    if x ==10:\n",
+    "        print \"Hello\""
    ]
   },
   {
@@ -3240,7 +3245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
