--- a/assignments/notebooks/01 - Introduction to Python (Basics).ipynb
+++ b/assignments/notebooks/01 - Introduction to Python (Basics).ipynb
@@ -2985,7 +2985,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = 12\n",
