--- a/testsandsubmissions/tests/bigdatamidterm/Big Data Midterm.ipynb
+++ b/testsandsubmissions/tests/bigdatamidterm/Big Data Midterm.ipynb
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5) Test whether the two lists are equal too each other and if not what elements are shared between the two lists.**<br/>\n",
+    "**5) Test whether the two lists are equal to each other and if not what elements are shared between the two lists.**<br/>\n",
     "<t/>list1 = ['1',2,'3',4,5]<br/>\n",
     "<t/>list2 = [1,2,3,4,'5',6]<br/>\n",
     "<br/>\n",
@@ -112,9 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -122,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6) Convert list2 to be indentical to list1 by casting the datatypes to match those in list1.**<br/>"
+    "**6) Convert list2 to be identical to list1 by casting the datatypes to match those in list1.**<br/>"
    ]
   },
   {
